Fixed Java 8 Issues again